# streamlit-kafka

./: .dockerignore  .env.docker  .env.template  .gitignore  Dockerfile  README.md  consumer.py  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  kafka_to_postgres.py  main.py  nginx.conf  postgres_queries.sql  producer.py  pyproject.toml  query_postgres.py  requirements.txt
.streamlit/: config.toml
k8s/: README.md  admin-service-account.yaml  deploy.ps1  deploy.sh  docker_k8s_deploy.ps1  kafka-producer.yaml  kafka-to-postgres.yaml  kafka-ui.yaml  kafka.yaml  namespace.yaml  postgres.yaml  remote_deploy.md  secrets.yaml  storage.yaml  streamlit.yaml  zookeeper.yaml
pages/: 01_📊_Visualizations.py  02_🔍_Anomaly_Detection.py
